# dropzip

./: README.md  pyproject.toml
.github/workflows/: lint.yml
actions/validate/: action.yml
src/dropzip/: dropzip.py
